<resources>
    <string name="app_name">AutoText</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="submit">submit</string>
    <string name="back_button_label">back</string>
    <string name="skip_button_label">skip</string>
    <string name="next_button_label">next</string>
    <string name="settings_safetylegal_activity_loading">Loading\u2026</string>
    <string name="help_uri_default" translatable="false"></string>
    <string name="okay">OK</string>
    <string name="help_feedback_label">help feedback</string>

    <string name="about">about</string>
    <string name="auto_fill_text">auto fill text</string>
    <string name="open_source_license">open source_license</string>
    <string name="auther">auther</string>
    <string name="rate_app">rate app</string>
    <string name="version">version</string>
    <string name="reset">reset</string>
    <string name="search">search</string>
    <string name="change">change</string>
    <string name="accessibility_description">accessibility description</string>
    <string name="auto_text_helper">Auto Helper</string>
    <string name="clipboard">clip</string>
    <string name="please_open_accessbility">please open accessbility</string>
    <string name="setting">setting</string>
    <string name="all">all</string>
    <string name="add">add</string>
    <string name="custom">costom</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="add_auto_text">add auto text</string>
    <string name="fab_transition_name">fab_transition</string>
</resources>


